--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@
               </p>
               <div class="d-flex flex-wrap align-itmes-center gap-3 gap-md-6 mt-4 mt-md-8">
                 <a href="portfolio.html"
-                  class="primary-btn px-3 px-md-6 py-2 fw-medium d-flex align-items-center gap-2">
+                  class="primary-btn px-3 px-md-6 py-2 fw-medium d-flex align-items-center gap-2 rounded-3">
                   <i class="ph ph-arrow-right"></i>View Portfolio
                 </a>
                 <a href="resume.html"
-                  class="primary-btn2 fw-medium px-3 px-md-6 py-2 d-flex align-items-center gap-2">
+                  class="primary-btn2 fw-medium px-3 px-md-6 py-2 d-flex align-items-center gap-2 rounded-3">
                   <img src="./assets/images/resume-icon.png" alt="icon" />View
                   Resume
                 </a>
@@ -318,14 +318,15 @@
         <div class="container">
           <div class="d-flex gap-3 flex-wrap flex-xxl-nowrap justify-content-between align-items-end pb-60">
             <div data-aos="zoom-in-left" class="section-heading">
-              <div class="d-flex align-items-center gap-2">
-                <div class="title-line"></div>
+              <div class="d-flex flex-column">                
                 <h2 class="display-four n5-color fw-semibold">What I do</h2>
+                <div class="title-line"></div>
               </div>
               <p class="fs-seven n4-color mt-2 mt-md-4">
                 I specialize in responsive web design, mobile applications, and building SaaS, B2B, and B2C platforms. With a user-first mindset, 
                 I strive to design digital experiences that are not only functional but also intuitive and delightful to use. Want to find
-                out more about my experience? Check out my
+                out more about my experience? 
+                <br>Check out my
                 <a href="resume.html" class="p1-color">online resume</a> and
                 <a href="portfolio.html" class="p1-color">project portfolio</a>.
               </p>
@@ -474,11 +475,11 @@
         <div class="container">
           <div class="d-flex gap-3 flex-wrap flex-xxl-nowrap justify-content-between align-items-end mb-8 mb-md-15">
             <div data-aos="zoom-in-left" class="section-heading">
-              <div class="d-flex align-items-center gap-2">
-                <div class="title-line"></div>
+              <div class="d-flex flex-column">                 
                 <h2 class="display-four n5-color fw-semibold">
                   Featured Projects
                 </h2>
+                <div class="title-line"></div>
               </div>
               <p class="fs-seven n4-color mt-2 mt-md-4">
                 My step-by-step guide ensures a smooth project journey, from
@@ -650,7 +651,7 @@
       </section>
       <!-- Featured Projects section end -->
 
-      <!-- Testimonials section start -->
+      <!-- Testimonials section start
       <section class="pt-120 pb-120 br-bottom-n3">
         <div class="container">
           <div data-aos="zoom-in-up" class="section-heading">
@@ -818,9 +819,9 @@
           </div>
         </div>
       </section>
-      <!-- Testimonials section end -->
+     Testimonials section end -->
 
-      <!-- Latest Blog Posts section start -->
+      <!-- Latest Blog Posts section start 
       <section class="pt-120 pb-120">
         <div class="container">
           <div class="d-flex gap-3 flex-wrap flex-xxl-nowrap justify-content-between align-items-end mb-8 mb-md-15">
@@ -895,15 +896,12 @@
           </div>
         </div>
       </section>
-      <!-- Latest Blog Posts section end -->
+      Latest Blog Posts section end -->
 
       <!-- footer section start -->
-      <section
-        class="container d-flex flex-wrap gap-3 gap-md-6 justify-content-center justify-content-sm-between align-items-center pb-4 pb-md-8 text-center mb-16 mb-lg-0">
-        <span class="fs-eight fw-medium n5-color order-sm-2">Designed by
-          <a href="https://themeforest.net/user/uiaxis" class="fs-eight fw-medium n5-color">UIAXIS</a></span>
-        <span class="fs-eight fw-medium n5-color order-sm-1">Copyright © 2024
-          <a href="index.html" class="fs-eight fw-medium n5-color">Gurjit</a>. All Rights Reserved.</span>
+      <section class="container d-flex pb-120">       
+        <span class="fs-eight fw-medium n5-color my-5">Copyright © 2025
+          <a href="index.html" class="fs-eight fw-medium n5-color">Gurjit Kaur</a>. All Rights Reserved.</span>
       </section>
       <!-- footer section end -->
     </div>
