--- a/portfolio_details.html
+++ b/portfolio_details.html
@@ -372,7 +372,7 @@
               <h3
                 class="page-title fs-onefw-semibold n5-color mb-2 mb-md-3 text-center"
               >
-                Case Study: My Accout/ Customer Service Portal
+                Case Study: Customer Service Portal
               </h3>
               <p class="fs-seven n5-color mb-4 mb-md-8 text-center">
                 This project was designed to help users manage their online accounts for billing and payments. They could create accounts, add services, track orders, make payments, and access support. Additionally, users were able to link multiple accounts under one primary account. We developed 
