--- a/portfolio_details.html
+++ b/portfolio_details.html
@@ -369,19 +369,17 @@
         <section class="pt-120 pb-120 mt-10 mt-lg-0">
           <div class="pb-60">
             <div data-aos="zoom-in" class="page-heading">
-              <h3
-                class="page-title fs-onefw-semibold n5-color mb-2 mb-md-3 text-center"
-              >
+              <h3 class="page-title fs-onefw-semibold n5-color mb-2 mb-md-3 text-center">
                 Case Study: Customer Service Portal
               </h3>
               <p class="fs-seven n5-color mb-4 mb-md-8 text-center">
-                This project was designed to help users manage their online accounts for billing and payments. They could create accounts, add services, track orders, make payments, and access support. Additionally, users were able to link multiple accounts under one primary account. We developed 
+                This project was designed to help users manage their online accounts for billing and payments. They could create
+                accounts, add services, track orders, make payments, and access support. Additionally, users were able to link
+                multiple accounts under one primary account. We developed
                 this mobile-friendly web application for various in house brands(Bell, Virgin, Distributel, Acanac, Primus).
               </p>
-              <a
-                href="contact.html"
-                class="w-max primary-btn fw-medium n11-color px-3 px-md-6 py-2 py-md-4 rounded-pill d-flex align-items-center gap-2 mx-auto"
-              >
+              <a href="contact.html"
+                class="w-max primary-btn fw-medium n11-color px-3 px-md-6 py-2 py-md-4 rounded-pill d-flex align-items-center gap-2 mx-auto">
                 <i class="ph ph-paper-plane-tilt"></i>Get in touch
               </a>
             </div>
