--- a/portfolio_details.html
+++ b/portfolio_details.html
@@ -184,57 +184,10 @@
           class="w-100 bgn1-color p-3 position-fixed z-3 top-0 d-lg-none d-flex align-items-center justify-content-between br-bottom-n5 box-shadow1"
         >
           <a href="index.html" class="side-icon bgn2-color brn4">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="11"
-              height="15"
-              viewBox="0 0 11 15"
-              fill="none"
-            >
-              <g clip-path="url(#clip0_3569_434)">
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M5.69145 8.43063L1.72801 5.49387L5.69145 2.54023V0L0 4.21303V6.75919L5.69145 10.9887V8.43063Z"
-                  fill="rgba(var(--p1))"
-                />
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M1.72801 5.49387L5.69145 2.54023V0L0 4.21303V6.75919L1.72801 5.49387Z"
-                  fill="rgba(var(--p1))"
-                />
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M4.86328 6.5702L8.82672 9.5065L4.86328 12.4606V15.0004L10.5552 10.7864V8.24163L4.86328 4.01172V6.5702Z"
-                  fill="rgba(var(--p1))"
-                />
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M4.86328 6.5702L8.82672 9.5065L10.5552 10.7864V8.24163L4.86328 4.01172V6.5702Z"
-                  fill="rgba(var(--p1))"
-                />
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M8.72466 2.00391C9.52091 2.00391 10.1657 2.64912 10.1657 3.44491C10.1657 4.24115 9.52091 4.88591 8.72466 4.88591C7.92841 4.88591 7.2832 4.2407 7.2832 3.44491C7.2832 2.64912 7.92841 2.00391 8.72466 2.00391Z"
-                  fill="rgba(var(--p1))"
-                />
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M1.83013 12.9972C1.03388 12.9972 0.388672 12.352 0.388672 11.5562C0.388672 10.7604 1.03388 10.1152 1.82967 10.1152C2.62546 10.1152 3.27067 10.76 3.27067 11.5562C3.27067 12.3525 2.62592 12.9972 1.82967 12.9972H1.83013Z"
-                  fill="rgba(var(--p1))"
-                />
-              </g>
-              <defs>
-                <clipPath>
-                  <rect width="10.5561" height="15" fill="white" />
-                </clipPath>
-              </defs>
-            </svg>
+             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="18" viewBox="0 0 38 48" fill="none">
+<path d="M17.8864 15.1591C17.697 14.5455 17.4356 13.9962 17.1023 13.5114C16.7765 13.0189 16.3826 12.5985 15.9205 12.25C15.4659 11.9015 14.9432 11.6402 14.3523 11.4659C13.7614 11.2841 13.1174 11.1932 12.4205 11.1932C11.1705 11.1932 10.0568 11.5076 9.07955 12.1364C8.10227 12.7652 7.33333 13.6894 6.77273 14.9091C6.2197 16.1212 5.94318 17.5985 5.94318 19.3409C5.94318 21.0985 6.2197 22.5871 6.77273 23.8068C7.32576 25.0265 8.0947 25.9545 9.07955 26.5909C10.0644 27.2197 11.2083 27.5341 12.5114 27.5341C13.6932 27.5341 14.7159 27.3068 15.5795 26.8523C16.4508 26.3977 17.1212 25.7538 17.5909 24.9205C18.0606 24.0795 18.2955 23.0947 18.2955 21.9659L19.25 22.1136H12.9318V18.8182H22.375V21.6136C22.375 23.6061 21.9508 25.3295 21.1023 26.7841C20.2538 28.2386 19.0871 29.3598 17.6023 30.1477C16.1174 30.928 14.4129 31.3182 12.4886 31.3182C10.3447 31.3182 8.46212 30.8371 6.84091 29.875C5.22727 28.9053 3.96591 27.5303 3.05682 25.75C2.1553 23.9621 1.70455 21.8409 1.70455 19.3864C1.70455 17.5076 1.9697 15.8295 2.5 14.3523C3.03788 12.875 3.78788 11.6212 4.75 10.5909C5.71212 9.55303 6.84091 8.76515 8.13636 8.22727C9.43182 7.68182 10.8409 7.40909 12.3636 7.40909C13.6515 7.40909 14.8523 7.59848 15.9659 7.97727C17.0795 8.34848 18.0682 8.87879 18.9318 9.56818C19.803 10.2576 20.5189 11.0758 21.0795 12.0227C21.6402 12.9697 22.0076 14.0152 22.1818 15.1591H17.8864Z" fill="rgba(var(--p1))"/>
+<path d="M18.2955 43V19.7273H22.5114V30.4205H22.7955L31.875 19.7273H37.0227L28.0227 30.1705L37.1023 43H32.0341L25.0909 33.0227L22.5114 36.0682V43H18.2955Z" fill="rgba(var(--p1))"/>
+</svg>
           </a>
 
           <div class="d-flex gap-3 align-items-center">            
