--- a/portfolio_details2.html
+++ b/portfolio_details2.html
@@ -274,14 +274,11 @@
         <div class="pb-60">
           <div data-aos="zoom-in" class="page-heading">
             <h3 class="page-title fs-onefw-semibold n5-color mb-2 mb-md-3 text-center">
-              Case Study: Online Buyflow
+              Case Study: YouTema
             </h3>
             <p class="fs-seven n5-color mb-4 mb-md-8 text-center">
-              To improve the eCommerce experience, I redesigned the existing checkout process to make it more intuitive,
-              responsive, and transparent. The goal was to reduce cart abandonment, improve clarity around pricing and
-              discounts, and streamline the flow across devices.
-              We developed this mobile-friendly web application for various in house brands(Bell, Virgin, Distributel,
-              Acanac).
+              Designed an intuitive step-by-step purchase flow with responsive design techniques, 
+              improving the overall user experience and intuitive cart details with discounts and actual price comparison.
             </p>
             <a href="contact.html"
               class="w-max primary-btn fw-medium n11-color px-3 px-md-6 py-2 py-md-4 rounded-pill d-flex align-items-center gap-2 mx-auto">
@@ -295,91 +292,41 @@
               <div class="d-flex flex-column gap-5 position-sticky top-5 brn4 p-3 rounded">
                 <div>
                   <span class="n4-color fs-eight fw-medium d-block">Client:</span>
-                  <span class="n5-color fs-six fw-medium">Distribute, Acanac</span>
+                  <span class="n5-color fs-six fw-medium">Youtema (Swiss website)</span>
                 </div>
                 <div>
                   <span class="n4-color fs-eight fw-medium d-block">Services</span>
-                  <span class="n5-color fs-six fw-medium">Web Design/Development</span>
+                  <span class="n5-color fs-six fw-medium">Web Design / Development</span>
                 </div>
                 <div>
                   <span class="n4-color fs-eight fw-medium d-block">Technologies</span>
-                  <span class="n5-color fs-six fw-medium">Figma, Jira, Confluence, HTML5, SCSS, Bootstrap5</span>
+                  <span class="n5-color fs-six fw-medium">Figma/Adobe XD, Trello, HTML5, SCSS, Bootstrap5, Drupal</span>
                 </div>
-                <div>
+                <!--<div>
                   <span class="n4-color fs-eight fw-medium d-block">Website</span>
                   <a href="javascript:void(0)" class="n5-color fs-six fw-medium d-flex align-items-center gap-2">Live
                     preview <i class="ph-bold ph-arrow-right"></i></a>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <div data-aos="fade-right" class="col-12 col-xl-9">
               <div class="project-details-content d-flex flex-column gap-8 gap-md-15">
                 <div class="overflow-hidden">
-                  <img src="./assets/images/project3.png" alt="project" class="w-100 portfolio-details-img" />
+                  <img src="./assets/images/project2-1.png" alt="project" class="w-100 portfolio-details-img" />
                 </div>
                 <div data-aos="fade-up">
-                  <p class="text-seven n4-color">
-                    Lead UX/UI Designer, I collaborated on business requirements, created low- and high-fidelity
-                    wireframes, gathered approvals, incorporated feedback, and contributed to HTML/CSS development and
-                    design integration.
-                  </p>
+                
                   <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
-                    Project Blueprint
+                    Project Details
                   </h3>
 
-                  <p class="mb-1"><b>Customer Actions</b> The steps the user takes during the online purchase journey:</p>
-                  <ul class="mb-3">
-                    <li>
-                      Enters e-commerce site or app >> Browses product listings
-                    </li>
-                    <li>
-                      Selects a product >> Views comparison (price, features, discounts)
-                    </li>
-                    <li>
-                      Adds product to cart >>Reviews cart (edits quantities, applies discounts)
-                    </li>
-                    <li>
-                      Proceeds to checkout >> Enters payment/shipping details
-                    </li>
-                    <li>
-                      Confirms order >>Receives confirmation
-                    </li>
-                  </ul>
-
-
-                  <p class="mb-1"><b>Frontstage (User Interface / Touchpoints) :</b> Visible elements that the user directly
-                    interacts with:</p>
-                  <ul>
-                    <li>
-                      Responsive product
-                    </li>
-                    <li>
-                      Product detail pages with dynamic comparison modules
-                    </li>
-                    <li>
-                      Discount badge overlays and tooltips
-                    </li>
-                    <li>
-                      Sticky, collapsible cart accessible site-wide
-                    </li>
-                    <li>
-                      Clear CTAs: “Add to Cart,” “Compare,” “Checkout”
-                    </li>
-                    <li>
-                      Progress indicator in checkout flow
-                    </li>
-                    <li>
-                      Order summary with editable line items
-                    </li>
-                    <li>
-                      Mobile-first checkout UX
-                    </li>
-                    <li>
-                      Confirmation screen + email confirmation
-                    </li>
-                  </ul>
-
+                  <p class="mb-1">
+                    <b>Team Composition:</b>UX/UI Designer, Developers, QA Analysts, Product Owners, Project Managers, and Business Stakeholders — a cross-functional team of approximately 15 members.
+<br/>
+                    <b>Role & Responsibilities:</b>Lead UX/UI Designer, I collaborated on business requirements, created low- and high-fidelity wireframes, gathered approvals, incorporated feedback, and
+                    contributed to HTML/CSS development.  
+                  </p>               
 
                 </div>
                 <div data-aos="fade-up">
@@ -393,9 +340,8 @@
                     The Challenge
                   </h2>
                   <p class="text-seven n4-color">
-                    Cluttered and inconsistent across devices, Lacking clear discount representation, Confusing price
-                    comparisons
-                    (e.g., sale vs. original), responsible for a high drop-off rate on mobile
+                   Users were frustrated with cluttered checkouts, hidden discount info, 
+                   and poor mobile usability, leading to incomplete purchases.
                   </p>
                 </div>
                 <div data-aos="fade-up">
@@ -403,40 +349,17 @@
                     The Approach & Solution
                   </h2>
                   <p class="text-seven n4-color mb-5 mb-md-10">
-                  <ul>
-                    <li>
-                      Competitive Analysis & Benchmarking: Reviewed UX patterns from top-performing eCommerce brands
-                    </li>
-                    <li>
-                      Identified effective UI conventions for cart and pricing clarity.
-
-                    </li>
-                    <li>
-                      Wireframing & Prototyping: Tool: Figma Created low to high-fidelity prototypes for: Cart summary
-                      view with price
-                      breakdown, Step-by-step checkout (Shipping → Payment → Review) , Mobile-first responsive layouts
-                    </li>
-                    <li>
-                      Design Implementation: Front-End: HTML5, CSS3, Flexbox, Bootstrap, Used atomic design principles
-                      for scalable UI
-                      components
-                    </li>
-                    <li>
-                      Validation: Ran A/B tests comparing the old and new checkout flows, Tested with real users on
-                      mobile and desktop
-                    </li>
-                  </ul>
+                 Simplify the checkout process into clear steps, Highlight discounts and actual price comparisons, 
+                 Ensure a responsive design across devices, Process Research & Insights
+                 User interviews revealed a need for clarity in total pricing and fewer steps, 
+                 Competitor analysis showed best practices like progress indicators and persistent cart summaries
 
                   </p>
                   <div class="row g-3 g-md-6">
-                    <div class="col-sm-6 overflow-hidden">
-                      <img src="./assets/images/project-detail1.png" alt="project"
+                    <div class="col-sm-12 overflow-hidden">
+                      <img src="./assets/images/project2-2.png" alt="project"
                         class="w-100 object-fit-cover portfolio-details-img" />
-                    </div>
-                    <div class="col-sm-6 overflow-hidden">
-                      <img src="./assets/images/project-detail2.png" alt="project"
-                        class="w-100 object-fit-cover portfolio-details-img" />
-                    </div>
+                    </div>                    
                   </div>
 
                 </div>
@@ -445,9 +368,12 @@
                     The Results
                   </h2>
                   <p data-aos="fade-up" class="text-seven n4-color mb-8 mb-md-15">
-                    The redesigned purchase flow not only enhanced UX clarity and reduced friction, but also contributed
-                    to a significant uplift in mobile conversions—a critical success factor for the client’s growth
-                    targets.
+                   A/B testing showed a 30% boost in conversion and 40% lower cart abandonment
+                    Users rated the new flow 4.8/5 in usability
+                    Mobile completion rate increased by 60% <br>
+
+                    This redesign significantly improved the purchase experience by making it intuitive, transparent, and responsive—resulting in higher engagement and sales.
+
                   </p>
 
                 </div>
