--- a/portfolio_details1.html
+++ b/portfolio_details1.html
@@ -354,10 +354,10 @@
                       >Technologies</span>
                     <span class="n5-color fs-six fw-medium">Figma, Jira, Confluence, HTML5, SCSS, Bootstrap5</span>
                   </div>
-                  <div>
+                  <!--<div>
                     <span class="n4-color fs-eight fw-medium d-block">Website</span>
                     <a href="javascript:void(0)" class="n5-color fs-six fw-medium d-flex align-items-center gap-2">Live preview <i class="ph-bold ph-arrow-right"></i></a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
 
