--- a/portfolio_details3.html
+++ b/portfolio_details3.html
@@ -270,25 +270,7 @@
       </div>
 
       <!-- Portfolio details section start -->
-      <section class="pt-120 pb-120 mt-10 mt-lg-0">
-        <div class="pb-60">
-          <div data-aos="zoom-in" class="page-heading">
-            <h3 class="page-title fs-onefw-semibold n5-color mb-2 mb-md-3 text-center">
-              Case Study: Online Buyflow
-            </h3>
-            <p class="fs-seven n5-color mb-4 mb-md-8 text-center">
-              To improve the eCommerce experience, I redesigned the existing checkout process to make it more intuitive,
-              responsive, and transparent. The goal was to reduce cart abandonment, improve clarity around pricing and
-              discounts, and streamline the flow across devices.
-              We developed this mobile-friendly web application for various in house brands(Bell, Virgin, Distributel,
-              Acanac).
-            </p>
-            <a href="contact.html"
-              class="w-max primary-btn fw-medium n11-color px-3 px-md-6 py-2 py-md-4 rounded-pill d-flex align-items-center gap-2 mx-auto">
-              <i class="ph ph-paper-plane-tilt"></i>Get in touch
-            </a>
-          </div>
-        </div>
+      <section class="py-60 mt-10 mt-lg-0">        
         <div class="container mt-8 mt-md-15 pb-60">
           <div class="row g-6">
             <div data-aos="fade-left" class="col-12 col-xl-3">
@@ -318,12 +300,29 @@
                 <div class="overflow-hidden">
                   <img src="./assets/images/project3-1.png" alt="project" class="w-100 portfolio-details-img" />
                 </div>
+              
                 <div data-aos="fade-up">
-                  <p class="text-seven n4-color">
+                   <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
+                    Case Study: Online Buyflow
+                  </h3>
+                  <p class="fs-seven n4-color">
+                    To improve the eCommerce experience, I redesigned the existing checkout process to make it more intuitive,
+                    responsive, and transparent. The goal was to reduce cart abandonment, improve clarity around pricing and
+                    discounts, and streamline the flow across devices.
+                    We developed this mobile-friendly web application for various in house brands(Bell, Virgin, Distributel,
+                    Acanac).
+                  </p>
+                  </div>
+                <div data-aos="fade-up">                  
+                  <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4"> Role: </h3>
+                  <p class="text-seven n4-color"></p>
                     Lead UX/UI Designer, I collaborated on business requirements, created low- and high-fidelity
                     wireframes, gathered approvals, incorporated feedback, and contributed to HTML/CSS development and
                     design integration.
                   </p>
+                </div>
+
+                <div data-aos="fade-up">  
                   <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
                     Project Blueprint
                   </h3>
@@ -382,16 +381,11 @@
 
 
                 </div>
+               
                 <div data-aos="fade-up">
-                  <h2 class="fs-one fw-semibold n5-color mb-2 mb-md-4">
-                    Project Overview
-                  </h2>
-
-                </div>
-                <div data-aos="fade-up">
-                  <h2 class="fs-two fw-semibold n5-color mb-2 mb-md-4">
+                <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
                     The Challenge
-                  </h2>
+                  </h3>
                   <p class="text-seven n4-color">
                     Cluttered and inconsistent across devices, Lacking clear discount representation, Confusing price
                     comparisons
@@ -399,9 +393,9 @@
                   </p>
                 </div>
                 <div data-aos="fade-up">
-                  <h2 class="fs-two fw-semibold n5-color mb-2 mb-md-4">
+                  <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
                     The Approach & Solution
-                  </h2>
+                  </h3>
                   <p class="text-seven n4-color mb-5 mb-md-10">
                   <ul>
                     <li>
@@ -428,12 +422,15 @@
                   </ul>
 
                   </p>
-                  <div class="row g-3 g-md-6">
-                    <div class="col-sm-6 overflow-hidden">
+                  <div class="row g-3 g-md-6 mt-5">
+                    <div class="col-sm-1 overflow-hidden"></div>
+                    <div class="col-sm-5 overflow-hidden">
                       <img src="./assets/images/projectd-3.png" alt="project"
                         class="w-100 object-fit-cover portfolio-details-img" />
                     </div>
-                    <div class="col-sm-6 overflow-hidden">
+                    <div class="col-sm-1 overflow-hidden"></div>
+
+                    <div class="col-sm-5 overflow-hidden">
                       <img src="./assets/images/projectd-3-1.png" alt="project"
                         class="w-100 object-fit-cover portfolio-details-img" />
                     </div>
@@ -441,9 +438,9 @@
 
                 </div>
                 <div data-aos="fade-up">
-                  <h2 class="fs-two fw-semibold n5-color mb-2 mb-md-4">
+                  <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
                     The Results
-                  </h2>
+                  </h3>
                   <p data-aos="fade-up" class="text-seven n4-color mb-8 mb-md-15">
                     The redesigned purchase flow not only enhanced UX clarity and reduced friction, but also contributed
                     to a significant uplift in mobile conversions—a critical success factor for the client’s growth
