--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                     </div>
                     <a href="portfolio_details4.html"
                       class="project-title fs-five fw-semibold n5-color mt-3 mt-md-5 d-block">
-                     SCIT- Secure Customer Input Tool
+                     E-Commerce Mobile App
                     </a>
                   </div>
                   <a href="portfolio_details4.html"
@@ -851,7 +851,7 @@
       Latest Blog Posts section end -->
 
       <!-- footer section start -->
-      <section class="container d-flex pb-120">       
+      <section class="footer container d-flex pb-120">       
         <span class="fs-eight fw-medium n5-color my-5">Copyright © 2025
           <a href="index.html" class="fs-eight fw-medium n5-color">Gurjit Kaur</a>. All Rights Reserved.</span>
       </section>
