--- a/portfolio_details3.html
+++ b/portfolio_details3.html
@@ -482,7 +482,8 @@
       <!-- Portfolio details section end -->
 
       <!-- footer section start -->
-      <section class="container d-flex pb-120">
+      <!-- footer section start -->
+      <section class="footer container d-flex pb-120">       
         <span class="fs-eight fw-medium n5-color my-5">Copyright © 2025
           <a href="index.html" class="fs-eight fw-medium n5-color">Gurjit Kaur</a>. All Rights Reserved.</span>
       </section>
