--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- #keywords -->
-  <meta name="keywords" content="boot, Bootstrap, Gurjit's Blog HTML Template" />
+  <meta name="keywords" content="Gurjit's Portfolio " />
   <!-- #description -->
-  <meta name="description" content="Gurjit's Blog - Responsive Personal Portfolio & Resume HTML Template" />
+  <meta name="description" content="Gurjit's Portfolio"/>
   <!-- #title -->
-  <title>Gurjit - Personal Portfolio & Resume HTML Template</title>
+  <title>Gurjit - Personal Portfolio</title>
   <!-- #favicon -->
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon" />
   <!-- ==== css dependencies start ==== -->
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- swiper  -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
   <!-- ICON  -->
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
@@ -306,7 +307,6 @@
                 I strive to design digital experiences that are not only functional but also intuitive and delightful to use. Want to find
                 out more about my experience? 
                 <br>Check out my
-                <a href="resume.html" class="p1-color">online resume</a> and
                 <a href="portfolio.html" class="p1-color">project portfolio</a>.
               </p>
             </div>
