--- a/portfolio.html
+++ b/portfolio.html
@@ -226,7 +226,7 @@
 
       <!-- best project section start -->
       <section class="py-60 mt-10 mt-lg-0">
-        <div class="pb-60 br-bottom-n3">
+        <div class="pb-60 br-bottom-n3 text-center">
           <div data-aos="zoom-in" class="page-heading">
              <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
               A collection of my best projects
