--- a/portfolio_details3.html
+++ b/portfolio_details3.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- #keywords -->
-  <meta name="keywords" content="boot, Bootstrap, Gurjit's Blog HTML Template" />
+  <meta name="keywords" content="Gurjit's Portfolio " />
   <!-- #description -->
-  <meta name="description" content="Gurjit's Blog - Responsive Personal Portfolio & Resume HTML Template" />
+  <meta name="description" content="Gurjit's Portfolio"/>
   <!-- #title -->
-  <title>Gurjit - Personal Portfolio & Resume HTML Template</title>
+  <title>Gurjit - Personal Portfolio</title>
   <!-- #favicon -->
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon" />
   <!-- ==== css dependencies start ==== -->
@@ -145,12 +145,7 @@
                     </a>
                   </li>
 
-                  <li class="rounded-3">
-                    <a href="resume.html" class="d-flex align-items-center gap-2 n5-color fs-eight px-3 py-2"><i
-                        class="ph ph-notebook fs-six"></i> Resume</a>
-                  </li>
-
-
+                
                   <li class="rounded-3">
                     <a href="contact.html" class="d-flex align-items-center gap-2 n5-color fs-eight px-3 py-2"><i
                         class="ph ph-envelope fs-six"></i>Contact</a>
