--- a/portfolio_details1.html
+++ b/portfolio_details1.html
@@ -1,38 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- required meta -->
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- #keywords -->
-    <meta name="keywords" content="boot, Bootstrap, Gurjit's Blog HTML Template" />
-    <!-- #description -->
-    <meta
-      name="description"
-      content="Gurjit's Blog - Responsive Personal Portfolio & Resume HTML Template"
-    />
-    <!-- #title -->
-    <title>Gurjit - Personal Portfolio & Resume HTML Template</title>
-    <!-- #favicon -->
-    <link
-      rel="shortcut icon"
-      href="assets/images/logo.png"
-      type="image/x-icon"
-    />
-    <!-- ==== css dependencies start ==== -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <!-- AOS  -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!-- swiper  -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
+<head>
+  <!-- required meta -->
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- #keywords -->
+  <meta name="keywords" content="Gurjit's Portfolio " />
+  <!-- #description -->
+  <meta name="description" content="Gurjit's Portfolio"/>
+  <!-- #title -->
+  <title>Gurjit - Personal Portfolio</title>
+  <!-- #favicon -->
+  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon" />
+  <!-- ==== css dependencies start ==== -->
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <!-- AOS  -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!-- swiper  -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-    <!-- ICON  -->
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
-  </head>
+  <!-- ICON  -->
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
+</head>
   <body>
     <!-- don't remove this 
     <svg
