--- a/portfolio_details2.html
+++ b/portfolio_details2.html
@@ -290,11 +290,11 @@
                   <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
                    Role & Responsibilities:
                   </h3>
-                  <p class="mb-1">
+                  <p class="mb-1 n4-color">
                      <b>Lead UX/UI Designer, </b>I collaborated on business requirements, created low- and high-fidelity wireframes, gathered approvals, incorporated feedback, and
                     contributed to HTML/CSS development.  
                   </p>
-                  <p>
+                  <p class="mb-1 n4-color">
                     <b>Team Composition:</b>UX/UI Designer, Developers, QA Analysts, Product Owners, 
                     Project Managers, and Business Stakeholders — a cross-functional team of approximately
                      15 members.                  
