--- a/portfolio_details3.html
+++ b/portfolio_details3.html
@@ -289,7 +289,7 @@
                   </div>
                 <div data-aos="fade-up">                  
                   <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4"> Role: </h3>
-                  <p class="text-seven n4-color"></p>
+                  <p class="text-seven n4-color">
                     Lead UX/UI Designer, I collaborated on business requirements, created low- and high-fidelity
                     wireframes, gathered approvals, incorporated feedback, and contributed to HTML/CSS development and
                     design integration.
@@ -301,8 +301,8 @@
                     Project Blueprint
                   </h3>
 
-                  <p class="mb-1"><b>Customer Actions</b> The steps the user takes during the online purchase journey:</p>
-                  <ul class="mb-3">
+                  <p class="mb-1  n4-color"><b>Customer Actions</b> The steps the user takes during the online purchase journey:</p>
+                  <ul class="mb-3 n4-color">
                     <li>
                       Enters e-commerce site or app >> Browses product listings
                     </li>
@@ -321,9 +321,9 @@
                   </ul>
 
 
-                  <p class="mb-1"><b>Frontstage (User Interface / Touchpoints) :</b> Visible elements that the user directly
+                  <p class="mb-1 n4-color"><b>Frontstage (User Interface / Touchpoints) :</b> Visible elements that the user directly
                     interacts with:</p>
-                  <ul>
+                  <ul class="n4-color">
                     <li>
                       Responsive product
                     </li>
@@ -371,7 +371,7 @@
                     The Approach & Solution
                   </h3>
                   <p class="text-seven n4-color mb-5 mb-md-10">
-                  <ul>
+                  <ul class="n4-color">
                     <li>
                       Competitive Analysis & Benchmarking: Reviewed UX patterns from top-performing eCommerce brands
                     </li>
