--- a/portfolio_details4.html
+++ b/portfolio_details4.html
@@ -320,7 +320,7 @@
                     The Challenge
                   </h3>
                   <p class="text-seven n4-color">
-                    Online shoppers often abandon their carts due to poor navigation, slow performance, and lack of personalized experiences. Eunoia aimed to address these issues with a minimal, 
+                    Online shoppers often abandon their carts due to poor navigation, slow performance, and lack of personalized experiences. Eunyoa aimed to address these issues with a minimal, 
                     intuitive interface that highlights the brand's unique fashion identity.
                   </p>
                 </div>
@@ -364,7 +364,7 @@
                     The Results
                   </h3>
                   <p data-aos="fade-up" class="text-seven n4-color mb-8 mb-md-15">
-                    Designing Eunoia taught us the importance of balancing aesthetics with performance. A strong 
+                    Designing Eunyoa taught us the importance of balancing aesthetics with performance. A strong 
                     mobile shopping experience isn’t just about looking good — it needs to be intuitive, accessible, and efficient.
                   </p>
 
