--- a/portfolio_details4.html
+++ b/portfolio_details4.html
@@ -296,13 +296,13 @@
 
                    Figma Design System: Modular components, scalable typography, reusable color styles
 
-                    UI Style: Minimal, monochrome with accent colors (brand pink, charcoal)
+                    UI Style: Minimal, monochrome with accent colors (brand green, dark-grey)
 
                     Typography: Clean sans-serif (e.g., SF Pro / Poppins)
 
                     Imagery: Full-width product photos, editorial-style
                   </p>
-                             Project Overview
+                            
                  
                 </div>
                 <div data-aos="fade-up">
